# OpenMetaMate

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  statuspage-monitor.yml
assets/codebook/: default.json
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/routes/: extraction.py  health.py
backend/app/core/: __init__.py  config.py  exceptions.py  utils.py
backend/app/models/: __init__.py  llm.py  requests.py  responses.py
backend/app/services/: __init__.py  llm_service.py  mineru_processor.py  pdf_processor.py  pydantic_model_generator.py  s3_temp_storage.py
backend/tests/: test_coding_scheme_parsing.py  test_mineru_direct.py  test_responses.py
docs/: deployment.md
frontend/: .pnpmfile.cjs  .prettierignore  Dockerfile  eslint.config.mjs  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: author-info-modal.tsx  coding-scheme-editor.tsx  extraction-item-display.tsx  pdf-viewer-panel.tsx  resizable-panel-container.tsx
frontend/components/ui/: card.tsx  dialog.tsx  select.tsx  switch.tsx  toast.tsx
frontend/lib/: config.ts  types.ts  utils.ts
infra/: README.md  deploy.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
plans/: 001-production-deployment.md  002-lightsail-migration-guide.md  003-pdf-viewer-grounded-response.md  004-answer-correction.md  005-status-page-integration.md  006-cors-network-error-fix.md  007-backup-api-and-enhanced-logging.md  008-mineru-api-integration.md
