[project]
name = "metamate-backend"
version = "2.0.0"
description = "AI-powered PDF data extraction API"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "openai>=1.58.1",
    "pydantic>=2.7.4",
    "slowapi==0.1.9",
    "ruff==0.8.0",
    "pypdf>=5.1.0",
    "langchain-community>=0.2.19",
    "tiktoken>=0.5.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"app/services/llm_service.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
