[project]
name = "metamate-backend"
version = "2.0.0"
description = "AI-powered PDF data extraction API"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.18",
    "openai>=1.109.1",
    "pydantic>=2.7.4",
    "slowapi==0.1.9",
    "ruff==0.8.0",
    "pypdf>=5",
    "langchain-community>=0.2.19",
    "tiktoken>=0.5.1",
    "boto3>=1.40.64",
    "httpx>=0.28.1",
    "orjson>=3.11",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "evaluation*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"app/services/llm_service.py" = ["E501"]
"evaluation/prompts.py" = ["E501"]
"evaluation/llm_judge.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
eval = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "rouge-score>=0.1.2",
    "tqdm>=4.60.0",
    "google-genai>=1.0.0",
]
